--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.javasampleapproach.springsecurity</groupId>
-	<artifactId>SpringSecurityJDBCAuthenticationMySQL</artifactId>
+	<groupId>com.joe</groupId>
+	<artifactId>mutts_app</artifactId>
 	<version>0.0.1</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
-	<name>SpringSecurityJDBCAuthenticationMySQL</name>
-	<description>SpringSecurityJDBCAuthenticationMySQL</description>
+	<name>mutts_app</name>
+	<description>mutts_app restful api</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -51,6 +51,7 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
+			<version>8.0.13</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
