--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,31 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mutts_app?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=Ucd2sjsutwilio
+# ===============================
+# = DATA SOURCE
+# ===============================
+spring.datasource.url = jdbc:mysql://localhost:3306/whatsapp?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username =
+spring.datasource.password =
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# ===============================
+# = Thymeleaf configurations
+# ===============================
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
+
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder  
+# ==============================================================
+spring.queries.users-query=select email, password, active from user where email=?
+spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
