--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,14 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/whatsapp?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username =
 spring.datasource.password =
-spring.datasource.testWhileIdle = true
+spring.datasource.testWhileIdle = true 
 spring.datasource.validationQuery = SELECT 1
 
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
@@ -29,4 +29,4 @@ spring.thymeleaf.cache=false
 # = Spring Security / Queries for AuthenticationManagerBuilder  
 # ==============================================================
 spring.queries.users-query=select email, password, active from user where email=?
-spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+spring.queries.roles-query=select u.email, r.role from user u inner join userRole ur on(u.userId=ur.userId) inner join role r on(ur.roleId=r.roleId) where u.email=?
