--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # = DATA SOURCE
 # ===============================
 spring.datasource.url = jdbc:mysql://localhost:3306/whatsapp?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username =
+spring.datasource.username =root
 spring.datasource.password =
 spring.datasource.testWhileIdle = true 
 spring.datasource.validationQuery = SELECT 1
