--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 # ===============================
 spring.datasource.url = jdbc:mysql://localhost:3306/whatsapp?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username =root
-spring.datasource.password =
+spring.datasource.password =Ucd2sjsutwilio
 spring.datasource.testWhileIdle = true 
 spring.datasource.validationQuery = SELECT 1
 
